mod_mime: detect invalid use of MultiviewsMatch inside Location and LocationMatch sections.  Document that such usage is not valid. PR47754.

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@814728 13f79535-47bb-0310-9956-ffa450edef68